@@ -1,3 +1,10 @@
+2008-01-17  Michael Hutchinson  <mhutchinson@novell.com> 
+
+	* MonoDevelop.Core.Execution/ProcessHostController.cs:
+	  If MD is running in debug mode (i.e. stack traces have line numbers)
+	  then the process hosting RemoteProcessObjects should be in debug 
+	  mode too. Also, remove an "sh" call to improve portability.
+
 2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Core/Runtime.cs: Get add-ins from a version specific
